Update FreeRTOS Support

--- a/STM32/platformio.ini
+++ b/STM32/platformio.ini
@@ -12,6 +12,12 @@
 platform = ststm32
 board = genericSTM32F407VET6
 framework = stm32cube
+build_flags = 
+	-Ilib/FreeRTOS
+    -mthumb -march=armv7e-m -mfloat-abi=hard -mfpu=fpv4-sp-d16
+extra_scripts = update_link_flags.py
+upload_protocol = jlink
+debug_tool = jlink
 
 [platformio]
 include_dir = ./Inc
